fixed home pg spacing on small breakpoints

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -250,7 +250,7 @@ footer .container-fluid {
 
     .intro-container {
         width: 70%;
-        margin: 0;
+        margin: 0 0 0 1rem;
     }
 
     .row {
